--- a/bib/PhDfltClean.bib
+++ b/bib/PhDfltClean.bib
@@ -86,6 +86,17 @@
  year = {2015}
 }
 
+@article{Auton2015,
+ author = {Auton, Adam and Abecasis, Gon{\c{c}}alo R. and Altshuler, David M. and Durbin, Richard M. and Abecasis, Gon{\c{c}}alo R. and Bentley, David R. and Chakravarti, Aravinda and Clark, Andrew G. and Donnelly, Peter and Eichler, Evan E. and Flicek, Paul and Gabriel, Stacey B. and Gibbs, Richard a. and Green, Eric D. and Hurles, Matthew E. and Knoppers, Bartha M. and Korbel, Jan O. and Lander, Eric S. and Lee, Charles and others},
+ doi = {10.1038/nature15393},
+ journal = {Nature},
+ number = {7571},
+ pages = {68--74},
+ title = {A global reference for human genetic variation},
+ volume = {526},
+ year = {2015}
+}
+
 @article{Ay2015,
  author = {Ay, Ferhat and Noble, William S.},
  doi = {10.1186/s13059-015-0745-7},
@@ -250,6 +261,16 @@
  title = {Intermingling of chromosome territories in interphase suggests role in translocations and transcription-dependent associations},
  volume = {4},
  year = {2006}
+}
+
+@article{Brookes2015,
+ author = {Brookes, Anthony J. and Robinson, Peter N.},
+ doi = {10.1038/nrg3932},
+ journal = {Nature Reviews Genetics},
+ number = {November},
+ publisher = {Nature Publishing Group},
+ title = {Human genotype–phenotype databases: aims, challenges and opportunities},
+ year = {2015}
 }
 
 @article{Buenrostro2013,
@@ -3042,6 +3063,17 @@
  title = {Phase separation drives heterochromatin domain formation},
  volume = {547},
  year = {2017}
+}
+
+@article{Sudmant2015,
+ author = {Sudmant, Peter H. and Rausch, Tobias and Gardner, Eugene J. and Handsaker, Robert E. and Abyzov, Alexej and Huddleston, John and Zhang, Yan and Ye, Kai and Jun, Goo and {Hsi-Yang Fritz}, Markus and Konkel, Miriam K. and Malhotra, Ankit and St{\"{u}}tz, Adrian M. and Shi, Xinghua and {Paolo Casale}, Francesco and Chen, Jieming and Hormozdiari, Fereydoun and Dayama, Gargi and Chen, Ken and others},
+ doi = {10.1038/nature15394},
+ journal = {Nature},
+ number = {7571},
+ pages = {75--81},
+ title = {An integrated map of structural variation in 2,504 human genomes},
+ volume = {526},
+ year = {2015}
 }
 
 @article{Symmons2016,
