--- a/bib/PhDflt.bib
+++ b/bib/PhDflt.bib
@@ -1380,6 +1380,19 @@ url = {http://dx.doi.org/10.1038/nbt.3121},
 volume = {33},
 year = {2015}
 }
+@article{Sudmant2015,
+author = {Sudmant, Peter H. and Rausch, Tobias and Gardner, Eugene J. and Handsaker, Robert E. and Abyzov, Alexej and Huddleston, John and Zhang, Yan and Ye, Kai and Jun, Goo and {Hsi-Yang Fritz}, Markus and Konkel, Miriam K. and Malhotra, Ankit and St{\"{u}}tz, Adrian M. and Shi, Xinghua and {Paolo Casale}, Francesco and Chen, Jieming and Hormozdiari, Fereydoun and Dayama, Gargi and Chen, Ken and Malig, Maika and Chaisson, Mark J. P. and Walter, Klaudia and Meiers, Sascha and Kashin, Seva and Garrison, Erik and Auton, Adam and Lam, Hugo Y. K. and {Jasmine Mu}, Xinmeng and Alkan, Can and Antaki, Danny and Bae, Taejeong and Cerveira, Eliza and Chines, Peter and Chong, Zechen and Clarke, Laura and Dal, Elif and Ding, Li and Emery, Sarah and Fan, Xian and Gujral, Madhusudan and Kahveci, Fatma and Kidd, Jeffrey M. and Kong, Yu and Lameijer, Eric-Wubbo and McCarthy, Shane and Flicek, Paul and Gibbs, Richard a. and Marth, Gabor and Mason, Christopher E. and Menelaou, Androniki and Muzny, Donna M. and Nelson, Bradley J. and Noor, Amina and Parrish, Nicholas F. and Pendleton, Matthew and Quitadamo, Andrew and Raeder, Benjamin and Schadt, Eric E. and Romanovitch, Mallory and Schlattl, Andreas and Sebra, Robert and Shabalin, Andrey a. and Untergasser, Andreas and Walker, Jerilyn a. and Wang, Min and Yu, Fuli and Zhang, Chengsheng and Zhang, Jing and Zheng-Bradley, Xiangqun and Zhou, Wanding and Zichner, Thomas and Sebat, Jonathan and Batzer, Mark a. and McCarroll, Steven a. and Mills, Ryan E. and Gerstein, Mark B. and Bashir, Ali and Stegle, Oliver and Devine, Scott E. and Lee, Charles and Eichler, Evan E. and Korbel, Jan O.},
+doi = {10.1038/nature15394},
+file = {:home/ibnsalem/Mendeley/Sudmant et al. - 2015 - An integrated map of structural variation in 2,504 human genomes(2).pdf:pdf},
+issn = {0028-0836},
+journal = {Nature},
+number = {7571},
+pages = {75--81},
+title = {{An integrated map of structural variation in 2,504 human genomes}},
+url = {http://www.nature.com/doifinder/10.1038/nature15394},
+volume = {526},
+year = {2015}
+}
 @article{Shlyueva2014,
 abstract = {Cellular development, morphology and function are governed by precise patterns of gene expression. These are established by the coordinated action of genomic regulatory elements known as enhancers or cis-regulatory modules. More than 30 years after the initial discovery of enhancers, many of their properties have been elucidated; however, despite major efforts, we only have an incomplete picture of enhancers in animal genomes. In this Review, we discuss how properties of enhancer sequences and chromatin are used to predict enhancers in genome-wide studies. We also cover recently developed high-throughput methods that allow the direct testing and identification of enhancers on the basis of their activity. Finally, we discuss recent technological advances and current challenges in the field of regulatory genomics.},
 author = {Shlyueva, Daria and Stampfel, Gerald and Stark, Alexander},
@@ -6981,6 +6994,19 @@ url = {http://dx.doi.org/10.1016/j.cell.2015.02.040 http://linkinghub.elsevier.c
 volume = {160},
 year = {2015}
 }
+@article{Auton2015,
+author = {Auton, Adam and Abecasis, Gon{\c{c}}alo R. and Altshuler, David M. and Durbin, Richard M. and Abecasis, Gon{\c{c}}alo R. and Bentley, David R. and Chakravarti, Aravinda and Clark, Andrew G. and Donnelly, Peter and Eichler, Evan E. and Flicek, Paul and Gabriel, Stacey B. and Gibbs, Richard a. and Green, Eric D. and Hurles, Matthew E. and Knoppers, Bartha M. and Korbel, Jan O. and Lander, Eric S. and Lee, Charles and Lehrach, Hans and Mardis, Elaine R. and Marth, Gabor T. and McVean, Gil a. and Nickerson, Deborah a. and Schmidt, Jeanette P. and Sherry, Stephen T. and Wang, Jun and Wilson, Richard K. and Gibbs, Richard a. and Boerwinkle, Eric and Doddapaneni, Harsha and Han, Yi and Korchina, Viktoriya and Kovar, Christie and Lee, Sandra and Muzny, Donna and Reid, Jeffrey G. and Zhu, Yiming and Wang, Jun and Chang, Yuqi and Feng, Qiang and Fang, Xiaodong and Guo, Xiaosen and Jian, Min and Jiang, Hui and Jin, Xin and Lan, Tianming and Li, Guoqing and Li, Jingxiang and Li, Yingrui and Liu, Shengmao and Liu, Xiao and Lu, Yao and Ma, Xuedi and Tang, Meifang and Wang, Bo and Wang, Guangbiao and Wu, Honglong and Wu, Renhua and Xu, Xun and Yin, Ye and Zhang, Dandan and Zhang, Wenwei and Zhao, Jiao and Zhao, Meiru and Zheng, Xiaole and Lander, Eric S. and Altshuler, David M. and Gabriel, Stacey B. and Gupta, Namrata and Gharani, Neda and Toji, Lorraine H. and Gerry, Norman P. and Resch, Alissa M. and Flicek, Paul and Barker, Jonathan and Clarke, Laura and Gil, Laurent and Hunt, Sarah E. and Kelman, Gavin and Kulesha, Eugene and Leinonen, Rasko and McLaren, William M. and Radhakrishnan, Rajesh and Roa, Asier and Smirnov, Dmitriy and Smith, Richard E. and Streeter, Ian and Thormann, Anja and Toneva, Iliana and Vaughan, Brendan and Zheng-Bradley, Xiangqun and Bentley, David R. and Grocock, Russell and Humphray, Sean and James, Terena and Kingsbury, Zoya and Lehrach, Hans and Sudbrak, Ralf and Albrecht, Marcus W. and Amstislavskiy, Vyacheslav S. and Borodina, Tatiana a. and Lienhard, Matthias and Mertes, Florian and Sultan, Marc and Timmermann, Bernd and Yaspo, Marie-Laure and Mardis, Elaine R. and Wilson, Richard K. and Fulton, Lucinda and Fulton, Robert and Sherry, Stephen T. and Ananiev, Victor and Belaia, Zinaida and Beloslyudtsev, Dimitriy and Bouk, Nathan and Chen, Chao and Church, Deanna and Cohen, Robert and Cook, Charles and Garner, John and Hefferon, Timothy and Kimelman, Mikhail and Liu, Chunlei and Lopez, John and Meric, Peter and O'Sullivan, Chris and Ostapchuk, Yuri and Phan, Lon and Ponomarov, Sergiy and Schneider, Valerie and Shekhtman, Eugene and Sirotkin, Karl and Slotta, Douglas and Zhang, Hua and McVean, Gil a. and Durbin, Richard M. and Balasubramaniam, Senduran and Burton, John and Danecek, Petr and Keane, Thomas M. and Kolb-Kokocinski, Anja and McCarthy, Shane and Stalker, James and Quail, Michael and Schmidt, Jeanette P. and Davies, Christopher J. and Gollub, Jeremy and Webster, Teresa and Wong, Brant and Zhan, Yiping and Auton, Adam and Campbell, Christopher L. and Kong, Yu and Marcketta, Anthony and Gibbs, Richard a. and Yu, Fuli and Antunes, Lilian and Bainbridge, Matthew and Muzny, Donna and Sabo, Aniko and Huang, Zhuoyi and Wang, Jun and Coin, Lachlan J. M. and Fang, Lin and Guo, Xiaosen and Jin, Xin and Li, Guoqing and Li, Qibin and Li, Yingrui and Li, Zhenyu and Lin, Haoxiang and Liu, Binghang and Luo, Ruibang and Shao, Haojing and Xie, Yinlong and Ye, Chen and Yu, Chang and Zhang, Fan and Zheng, Hancheng and Zhu, Hongmei and Alkan, Can and Dal, Elif and Kahveci, Fatma and Marth, Gabor T. and Garrison, Erik P. and Kural, Deniz and Lee, Wan-Ping and {Fung Leong}, Wen and Stromberg, Michael and Ward, Alistair N. and Wu, Jiantao and Zhang, Mengyao and Daly, Mark J. and DePristo, Mark a. and Handsaker, Robert E. and Altshuler, David M. and Banks, Eric and Bhatia, Gaurav and del Angel, Guillermo and Gabriel, Stacey B. and Genovese, Giulio and Gupta, Namrata and Li, Heng and Kashin, Seva and Lander, Eric S. and McCarroll, Steven a. and Nemesh, James C. and Poplin, Ryan E. and Yoon, Seungtai C. and Lihm, Jayon and Makarov, Vladimir and Clark, Andrew G. and Gottipati, Srikanth and Keinan, Alon and Rodriguez-Flores, Juan L. and Korbel, Jan O. and Rausch, Tobias and Fritz, Markus H. and St{\"{u}}tz, Adrian M. and Flicek, Paul and Beal, Kathryn and Clarke, Laura and Datta, Avik and Herrero, Javier and McLaren, William M. and Ritchie, Graham R. S. and Smith, Richard E. and Zerbino, Daniel and Zheng-Bradley, Xiangqun and Sabeti, Pardis C. and Shlyakhter, Ilya and Schaffner, Stephen F. and Vitti, Joseph and Cooper, David N. and Ball, Edward V. and Stenson, Peter D. and Bentley, David R. and Barnes, Bret and Bauer, Markus and {Keira Cheetham}, R. and Cox, Anthony and Eberle, Michael and Humphray, Sean and Kahn, Scott and Murray, Lisa and Peden, John and Shaw, Richard and Kenny, Eimear E. and Batzer, Mark a. and Konkel, Miriam K. and Walker, Jerilyn a. and MacArthur, Daniel G. and Lek, Monkol and Sudbrak, Ralf and Amstislavskiy, Vyacheslav S. and Herwig, Ralf and Mardis, Elaine R. and Ding, Li and Koboldt, Daniel C. and Larson, David and Ye, Kai and Gravel, Simon and Swaroop, Anand and Chew, Emily and Lappalainen, Tuuli and Erlich, Yaniv and Gymrek, Melissa and {Frederick Willems}, Thomas and Simpson, Jared T. and Shriver, Mark D. and Rosenfeld, Jeffrey a. and Bustamante, Carlos D. and Montgomery, Stephen B. and {De La Vega}, Francisco M. and Byrnes, Jake K. and Carroll, Andrew W. and DeGorter, Marianne K. and Lacroute, Phil and Maples, Brian K. and Martin, Alicia R. and Moreno-Estrada, Andres and Shringarpure, Suyash S. and Zakharia, Fouad and Halperin, Eran and Baran, Yael and Lee, Charles and Cerveira, Eliza and Hwang, Jaeho and Malhotra, Ankit and Plewczynski, Dariusz and Radew, Kamen and Romanovitch, Mallory and Zhang, Chengsheng and Hyland, Fiona C. L. and Craig, David W. and Christoforides, Alexis and Homer, Nils and Izatt, Tyler and Kurdoglu, Ahmet a. and Sinari, Shripad a. and Squire, Kevin and Sherry, Stephen T. and Xiao, Chunlin and Sebat, Jonathan and Antaki, Danny and Gujral, Madhusudan and Noor, Amina and Ye, Kenny and Burchard, Esteban G. and Hernandez, Ryan D. and Gignoux, Christopher R. and Haussler, David and Katzman, Sol J. and {James Kent}, W. and Howie, Bryan and Ruiz-Linares, Andres and Dermitzakis, Emmanouil T. and Devine, Scott E. and Abecasis, Gon{\c{c}}alo R. and {Min Kang}, Hyun and Kidd, Jeffrey M. and Blackwell, Tom and Caron, Sean and Chen, Wei and Emery, Sarah and Fritsche, Lars and Fuchsberger, Christian and Jun, Goo and Li, Bingshan and Lyons, Robert and Scheller, Chris and Sidore, Carlo and Song, Shiya and Sliwerska, Elzbieta and Taliun, Daniel and Tan, Adrian and Welch, Ryan and {Kate Wing}, Mary and Zhan, Xiaowei and Awadalla, Philip and Hodgkinson, Alan and Li, Yun and Shi, Xinghua and Quitadamo, Andrew and Lunter, Gerton and McVean, Gil a. and Marchini, Jonathan L. and Myers, Simon and Churchhouse, Claire and Delaneau, Olivier and Gupta-Hinch, Anjali and Kretzschmar, Warren and Iqbal, Zamin and Mathieson, Iain and Menelaou, Androniki and Rimmer, Andy and Xifara, Dionysia K. and Oleksyk, Taras K. and Fu, Yunxin and Liu, Xiaoming and Xiong, Momiao and Jorde, Lynn and Witherspoon, David and Xing, Jinchuan and Eichler, Evan E. and Browning, Brian L. and Browning, Sharon R. and Hormozdiari, Fereydoun and Sudmant, Peter H. and Khurana, Ekta and Durbin, Richard M. and Hurles, Matthew E. and Tyler-Smith, Chris and Albers, Cornelis a. and Ayub, Qasim and Balasubramaniam, Senduran and Chen, Yuan and Colonna, Vincenza and Danecek, Petr and Jostins, Luke and Keane, Thomas M. and McCarthy, Shane and Walter, Klaudia and Xue, Yali and Gerstein, Mark B. and Abyzov, Alexej and Balasubramanian, Suganthi and Chen, Jieming and Clarke, Declan and Fu, Yao and Harmanci, Arif O. and Jin, Mike and Lee, Donghoon and Liu, Jeremy and {Jasmine Mu}, Xinmeng and Zhang, Jing and Zhang, Yan and Li, Yingrui and Luo, Ruibang and Zhu, Hongmei and Alkan, Can and Dal, Elif and Kahveci, Fatma and Marth, Gabor T. and Garrison, Erik P. and Kural, Deniz and Lee, Wan-Ping and Ward, Alistair N. and Wu, Jiantao and Zhang, Mengyao and McCarroll, Steven a. and Handsaker, Robert E. and Altshuler, David M. and Banks, Eric and del Angel, Guillermo and Genovese, Giulio and Hartl, Chris and Li, Heng and Kashin, Seva and Nemesh, James C. and Shakir, Khalid and Yoon, Seungtai C. and Lihm, Jayon and Makarov, Vladimir and Degenhardt, Jeremiah and Korbel, Jan O. and Fritz, Markus H. and Meiers, Sascha and Raeder, Benjamin and Rausch, Tobias and St{\"{u}}tz, Adrian M. and Flicek, Paul and {Paolo Casale}, Francesco and Clarke, Laura and Smith, Richard E. and Stegle, Oliver and Zheng-Bradley, Xiangqun and Bentley, David R. and Barnes, Bret and {Keira Cheetham}, R. and Eberle, Michael and Humphray, Sean and Kahn, Scott and Murray, Lisa and Shaw, Richard and Lameijer, Eric-Wubbo and Batzer, Mark a. and Konkel, Miriam K. and Walker, Jerilyn a. and Ding, Li and Hall, Ira and Ye, Kai and Lacroute, Phil and Lee, Charles and Cerveira, Eliza and Malhotra, Ankit and Hwang, Jaeho and Plewczynski, Dariusz and Radew, Kamen and Romanovitch, Mallory and Zhang, Chengsheng and Craig, David W. and Homer, Nils and Church, Deanna and Xiao, Chunlin and Sebat, Jonathan and Antaki, Danny and Bafna, Vineet and Michaelson, Jacob and Ye, Kenny and Devine, Scott E. and Gardner, Eugene J. and Abecasis, Gon{\c{c}}alo R. and Kidd, Jeffrey M. and Mills, Ryan E. and Dayama, Gargi and Emery, Sarah and Jun, Goo and Shi, Xinghua and Quitadamo, Andrew and Lunter, Gerton and McVean, Gil a. and Chen, Ken and Fan, Xian and Chong, Zechen and Chen, Tenghui and Witherspoon, David and Xing, Jinchuan and Eichler, Evan E. and Chaisson, Mark J. and Hormozdiari, Fereydoun and Huddleston, John and Malig, Maika and Nelson, Bradley J. and Sudmant, Peter H. and Parrish, Nicholas F. and Khurana, Ekta and Hurles, Matthew E. and Blackburne, Ben and Lindsay, Sarah J. and Ning, Zemin and Walter, Klaudia and Zhang, Yujun and Gerstein, Mark B. and Abyzov, Alexej and Chen, Jieming and Clarke, Declan and Lam, Hugo and {Jasmine Mu}, Xinmeng and Sisu, Cristina and Zhang, Jing and Zhang, Yan and Gibbs, Richard a. and Yu, Fuli and Bainbridge, Matthew and Challis, Danny and Evani, Uday S. and Kovar, Christie and Lu, James and Muzny, Donna and Nagaswamy, Uma and Reid, Jeffrey G. and Sabo, Aniko and Yu, Jin and Guo, Xiaosen and Li, Wangshen and Li, Yingrui and Wu, Renhua and Marth, Gabor T. and Garrison, Erik P. and {Fung Leong}, Wen and Ward, Alistair N. and del Angel, Guillermo and DePristo, Mark a. and Gabriel, Stacey B. and Gupta, Namrata and Hartl, Chris and Poplin, Ryan E. and Clark, Andrew G. and Rodriguez-Flores, Juan L. and Flicek, Paul and Clarke, Laura and Smith, Richard E. and Zheng-Bradley, Xiangqun and MacArthur, Daniel G. and Mardis, Elaine R. and Fulton, Robert and Koboldt, Daniel C. and Gravel, Simon and Bustamante, Carlos D. and Craig, David W. and Christoforides, Alexis and Homer, Nils and Izatt, Tyler and Sherry, Stephen T. and Xiao, Chunlin and Dermitzakis, Emmanouil T. and Abecasis, Gon{\c{c}}alo R. and {Min Kang}, Hyun and McVean, Gil a. and Gerstein, Mark B. and Balasubramanian, Suganthi and Habegger, Lukas and Yu, Haiyuan and Flicek, Paul and Clarke, Laura and Cunningham, Fiona and Dunham, Ian and Zerbino, Daniel and Zheng-Bradley, Xiangqun and Lage, Kasper and {Berg Jespersen}, Jakob and Horn, Heiko and Montgomery, Stephen B. and DeGorter, Marianne K. and Khurana, Ekta and Tyler-Smith, Chris and Chen, Yuan and Colonna, Vincenza and Xue, Yali and Gerstein, Mark B. and Balasubramanian, Suganthi and Fu, Yao and Kim, Donghoon and Auton, Adam and Marcketta, Anthony and Desalle, Rob and Narechania, Apurva and {Wilson Sayres}, Melissa a. and Garrison, Erik P. and Handsaker, Robert E. and Kashin, Seva and McCarroll, Steven a. and Rodriguez-Flores, Juan L. and Flicek, Paul and Clarke, Laura and Zheng-Bradley, Xiangqun and Erlich, Yaniv and Gymrek, Melissa and {Frederick Willems}, Thomas and Bustamante, Carlos D. and Mendez, Fernando L. and {David Poznik}, G. and Underhill, Peter a. and Lee, Charles and Cerveira, Eliza and Malhotra, Ankit and Romanovitch, Mallory and Zhang, Chengsheng and Abecasis, Gon{\c{c}}alo R. and Coin, Lachlan and Shao, Haojing and Mittelman, David and Tyler-Smith, Chris and Ayub, Qasim and Banerjee, Ruby and Cerezo, Maria and Chen, Yuan and Fitzgerald, Thomas W. and Louzada, Sandra and Massaia, Andrea and McCarthy, Shane and Ritchie, Graham R. and Xue, Yali and Yang, Fengtang and Gibbs, Richard a. and Kovar, Christie and Kalra, Divya and Hale, Walker and Muzny, Donna and Reid, Jeffrey G. and Wang, Jun and Dan, Xu and Guo, Xiaosen and Li, Guoqing and Li, Yingrui and Ye, Chen and Zheng, Xiaole and Altshuler, David M. and Flicek, Paul and Clarke, Laura and Zheng-Bradley, Xiangqun and Bentley, David R. and Cox, Anthony and Humphray, Sean and Kahn, Scott and Sudbrak, Ralf and Albrecht, Marcus W. and Lienhard, Matthias and Larson, David and Craig, David W. and Izatt, Tyler and Kurdoglu, Ahmet a. and Sherry, Stephen T. and Xiao, Chunlin and Haussler, David and Abecasis, Gon{\c{c}}alo R. and McVean, Gil a. and Durbin, Richard M. and Balasubramaniam, Senduran and Keane, Thomas M. and McCarthy, Shane and Stalker, James and Chakravarti, Aravinda and Knoppers, Bartha M. and Abecasis, Gon{\c{c}}alo R. and Barnes, Kathleen C. and Beiswanger, Christine and Burchard, Esteban G. and Bustamante, Carlos D. and Cai, Hongyu and Cao, Hongzhi and Durbin, Richard M. and Gerry, Norman P. and Gharani, Neda and Gibbs, Richard a. and Gignoux, Christopher R. and Gravel, Simon and Henn, Brenna and Jones, Danielle and Jorde, Lynn and Kaye, Jane S. and Keinan, Alon and Kent, Alastair and Kerasidou, Angeliki and Li, Yingrui and Mathias, Rasika and McVean, Gil a. and Moreno-Estrada, Andres and Ossorio, Pilar N. and Parker, Michael and Resch, Alissa M. and Rotimi, Charles N. and Royal, Charmaine D. and Sandoval, Karla and Su, Yeyang and Sudbrak, Ralf and Tian, Zhongming and Tishkoff, Sarah and Toji, Lorraine H. and Tyler-Smith, Chris and Via, Marc and Wang, Yuhong and Yang, Huanming and Yang, Ling and Zhu, Jiayong and Bodmer, Walter and Bedoya, Gabriel and Ruiz-Linares, Andres and Cai, Zhiming and Gao, Yang and Chu, Jiayou and Peltonen, Leena and Garcia-Montero, Andres and Orfao, Alberto and Dutil, Julie and Martinez-Cruzado, Juan C. and Oleksyk, Taras K. and Barnes, Kathleen C. and Mathias, Rasika a. and Hennis, Anselm and Watson, Harold and McKenzie, Colin and Qadri, Firdausi and LaRocque, Regina and Sabeti, Pardis C. and Zhu, Jiayong and Deng, Xiaoyan and Sabeti, Pardis C. and Asogun, Danny and Folarin, Onikepe and Happi, Christian and Omoniwa, Omonwunmi and Stremlau, Matt and Tariyal, Ridhi and Jallow, Muminatou and {Sisay Joof}, Fatoumatta and Corrah, Tumani and Rockett, Kirk and Kwiatkowski, Dominic and Kooner, Jaspal and {Tịnh Hi{\^{e}}`n}, Tr{\^{a}}`n and Dunstan, Sarah J. and {Thuy Hang}, Nguyen and Fonnie, Richard and Garry, Robert and Kanneh, Lansana and Moses, Lina and Sabeti, Pardis C. and Schieffelin, John and Grant, Donald S. and Gallo, Carla and Poletti, Giovanni and Saleheen, Danish and Rasheed, Asif and Brooks, Lisa D. and Felsenfeld, Adam L. and McEwen, Jean E. and Vaydylevich, Yekaterina and Green, Eric D. and Duncanson, Audrey and Dunn, Michael and Schloss, Jeffery a. and Wang, Jun and Yang, Huanming and Auton, Adam and Brooks, Lisa D. and Durbin, Richard M. and Garrison, Erik P. and {Min Kang}, Hyun and Korbel, Jan O. and Marchini, Jonathan L. and McCarthy, Shane and McVean, Gil a. and Abecasis, Gon{\c{c}}alo R.},
+doi = {10.1038/nature15393},
+file = {:home/ibnsalem/Mendeley/Auton et al. - 2015 - A global reference for human genetic variation(2).pdf:pdf},
+issn = {0028-0836},
+journal = {Nature},
+number = {7571},
+pages = {68--74},
+title = {{A global reference for human genetic variation}},
+url = {http://www.nature.com/doifinder/10.1038/nature15393},
+volume = {526},
+year = {2015}
+}
 @article{Filippova2014,
 abstract = {Chromosome conformation capture experiments have led to the discovery of dense, contiguous, megabase-sized topological domains that are similar across cell types and conserved across species. These domains are strongly correlated with a number of chromatin markers and have since been included in a number of analyses. However, functionally-relevant domains may exist at multiple length scales. We introduce a new and efficient algorithm that is able to capture persistent domains across various resolutions by adjusting a single scale parameter. The ensemble of domains we identify allows us to quantify the degree to which the domain structure is hierarchical as opposed to overlapping, and our analysis reveals a pronounced hierarchical structure in which larger stable domains tend to completely contain smaller domains. The identified novel domains are substantially different from domains reported previously and are highly enriched for insulating factor CTCF binding and histone marks at the boundaries.},
 annote = {IMR90 and mESC domains and code:
@@ -7259,6 +7285,18 @@ title = {t(1;18)(q32.1;q22.1) associated with genitourinary malformations},
 url = {http://doi.wiley.com/10.1034/j.1399-0004.1998.5440411.x},
 volume = {54},
 year = {1998}
+}
+@article{Brookes2015,
+author = {Brookes, Anthony J. and Robinson, Peter N.},
+doi = {10.1038/nrg3932},
+file = {:home/ibnsalem/Mendeley/Brookes, Robinson - 2015 - Human genotype–phenotype databases aims, challenges and opportunities(2).pdf:pdf},
+issn = {1471-0056},
+journal = {Nature Reviews Genetics},
+number = {November},
+publisher = {Nature Publishing Group},
+title = {{Human genotype–phenotype databases: aims, challenges and opportunities}},
+url = {http://www.nature.com/doifinder/10.1038/nrg3932},
+year = {2015}
 }
 @article{Deng2015,
 abstract = {BACKGROUND: Phenotypic features associated with genes and diseases play an important role in disease-related studies and most of the available methods focus solely on the Online Mendelian Inheritance in Man (OMIM) database without considering the controlled vocabulary. The Human Phenotype Ontology (HPO) provides a standardized and controlled vocabulary covering phenotypic abnormalities in human diseases, and becomes a comprehensive resource for computational analysis of human disease phenotypes. Most of the existing HPO-based software tools cannot be used offline and provide only few similarity measures. Therefore, there is a critical need for developing a comprehensive and offline software for phenotypic features similarity based on HPO.$\backslash$n$\backslash$nRESULTS: HPOSim is an R package for analyzing phenotypic similarity for genes and diseases based on HPO data. Seven commonly used semantic similarity measures are implemented in HPOSim. Enrichment analysis of gene sets and disease sets are also implemented, including hypergeometric enrichment analysis and network ontology analysis (NOA).$\backslash$n$\backslash$nCONCLUSIONS: HPOSim can be used to predict disease genes and explore disease-related function of gene modules. HPOSim is open source and freely available at SourceForge (https://sourceforge.net/p/hposim/).},
