update abstract and rebuild book

--- a/index.Rmd
+++ b/index.Rmd
@@ -49,9 +49,19 @@ knitr::opts_chunk$set(echo = FALSE)
 
 <!-- Chromosome conformation capture experiments coupled with high-throughput sequencing (Hi-C) allow to measure DNA-DNA contacts genome-wide and reviled a highly organized hierarchy of three-dimensional genome organization. -->
 
-The DNA of the human genome has a total length of 2 meters and fits into a 10 nm nucleus. Hi-C experiments probe the three-dimensional genome architecture by genome-wide DNA-DNA contact maps. In these maps, interphase chromosomes fold locally into regions of several hundred kb, called topologically associating domains (TADs). TADs can restrict the interactions of genes with distal regulatory sequences, such as enhancers, and might, therefore, represent important functional units of genomes.
+The human genome is folded non-randomly in the nucleus. 
+Proximity ligation methods probe the three-dimensional genome architecture and produce genome-wide maps of pairwise chromatin contacts. 
+Enrichment of these contacts in discrete regions of several hundred kilo-bases reveals local folding of chromosomes into so-called topologically associating domains (TADs). 
+TADs restrict contacts of distal regulatory sequences, such as enhancers, with their target genes and might, therefore, represent important functional units of genomes.
 
-In this thesis, I integrate genome-wide chromatin interaction maps with diverse genomic datasets to analyze the function of TADs for gene regulation during evolution and in disease genomes. More specifically, I show that duplicated gene pairs are enriched for colocalization in the same TAD, share more often common enhancer elements than expected and have increased contact frequencies over large genomic distances. The clustering of functionally related genes within TADs enables concerted gene expression and indicates evolutionary constraints in functional genome organization. Indeed, by analyzing evolutionary rearrangements between human and diverse mammal species, I show that TADs are highly conserved building blocks of genomes across millions of years of evolution. While TADs seems to conserve gene expression profiles between mouse and human, genes in rearranged TADs show divergent expression. Next, I analyze disruption of TADs in whole-genome sequenced subjects with diverse neurodevelopmental phenotypes. While the phenotypes cannot be explained by variants in protein-coding sequences, balanced chromosomal rearrangements disrupt TADs and promoter-enhancer interactions of phenotypically matching genes. This effect mechanism leads to altered gene expression in patient-derived cell lines. Finally, I present a computational tool, 7C, to predict long-range chromatin interactions by largely available ChIP-seq data. This enables the analysis of three-dimensional genome folding in many diverse tissues and conditions.
+This thesis describes the computational integration of genome-wide chromatin interaction maps with diverse genomic datasets to analyze the function of TADs for gene regulation during evolution and in diseases. 
+More specifically, pairs of functionally related genes, such as paralogs, are enriched for colocalization in the same TAD, share more often common enhancers than expected by chance, and have increased long-range contact frequencies. 
+The clustering of related genes within TADs enables concerted gene expression and indicates evolutionary constraints in functional genome organization. 
+Indeed, comparative genomic analysis of evolutionary rearrangements between human and diverse mammal species shows that TADs are highly conserved building blocks of genomes across millions of years of evolution. 
+While TADs, in general, conserve expression profiles between mouse and human orthologs, genes in rearranged TADs show divergent expression profiles. 
+Furthermore, a computational pipeline predicts disruption of TADs in whole-genome sequenced subjects with diverse neurodevelopmental phenotypes. 
+While altered protein-coding sequences cannot explain the phenotypes, balanced chromosomal rearrangements disrupt TADs and promoter-enhancer interactions of phenotypically matching genes leading to miss-regulation in patient-derived cell lines.
+Finally, a computational tool, 7C, is presented to predict chromatin looping interactions by broadly available ChIP-seq data. 
+This tool enables to study genome folding in many diverse tissues and conditions.
 
-Together, these results show that TAD disruption is associated with altered gene regulation during evolution and in diseases. TADs are not only structural units of genomes but also important functional building blocks and represent regulatory environments for genes. Therefore, it will be increasingly important to take the three-dimensional genome structure into account, not only in genomic research but also in clinical practice.
-
+Together, these results show that TAD disruptions cause altered gene regulation during evolution and in diseases. TADs are not only structural units of genomes but also crucial functional building blocks and represent regulatory environments for genes. Therefore, it will be increasingly important to take genome structure into account, not only in genomic research but also in clinical practice.
