--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -161,7 +161,7 @@
 
 \title{Genome folding in evolution and disease}
 \author{Jonas Ibn-Salem}
-\date{2018-02-18}
+\date{2018-02-19}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -224,46 +224,45 @@
 \chapter*{Abstract}\label{abstract}}
 \addcontentsline{toc}{chapter}{Abstract}
 
-The DNA of the human genome has a total length of 2 meters and fits into
-a 10 nm nucleus. Hi-C experiments probe the three-dimensional genome
-architecture by genome-wide DNA-DNA contact maps. In these maps,
-interphase chromosomes fold locally into regions of several hundred kb,
-called topologically associating domains (TADs). TADs can restrict the
-interactions of genes with distal regulatory sequences, such as
-enhancers, and might, therefore, represent important functional units of
-genomes.
+The human genome is folded non-randomly in the nucleus. Proximity
+ligation methods probe the three-dimensional genome architecture and
+produce genome-wide maps of pairwise chromatin contacts. Enrichment of
+these contacts in discrete regions of several hundred kilo-bases reveals
+local folding of chromosomes into so-called topologically associating
+domains (TADs). TADs restrict contacts of distal regulatory sequences,
+such as enhancers, with their target genes and might, therefore,
+represent important functional units of genomes.
 
-In this thesis, I integrate genome-wide chromatin interaction maps with
-diverse genomic datasets to analyze the function of TADs for gene
-regulation during evolution and in disease genomes. More specifically, I
-show that duplicated gene pairs are enriched for colocalization in the
-same TAD, share more often common enhancer elements than expected and
-have increased contact frequencies over large genomic distances. The
-clustering of functionally related genes within TADs enables concerted
-gene expression and indicates evolutionary constraints in functional
-genome organization. Indeed, by analyzing evolutionary rearrangements
-between human and diverse mammal species, I show that TADs are highly
-conserved building blocks of genomes across millions of years of
-evolution. While TADs seems to conserve gene expression profiles between
-mouse and human, genes in rearranged TADs show divergent expression.
-Next, I analyze disruption of TADs in whole-genome sequenced subjects
-with diverse neurodevelopmental phenotypes. While the phenotypes cannot
-be explained by variants in protein-coding sequences, balanced
-chromosomal rearrangements disrupt TADs and promoter-enhancer
-interactions of phenotypically matching genes. This effect mechanism
-leads to altered gene expression in patient-derived cell lines. Finally,
-I present a computational tool, 7C, to predict long-range chromatin
-interactions by largely available ChIP-seq data. This enables the
-analysis of three-dimensional genome folding in many diverse tissues and
-conditions.
+This thesis describes the computational integration of genome-wide
+chromatin interaction maps with diverse genomic datasets to analyze the
+function of TADs for gene regulation during evolution and in diseases.
+More specifically, pairs of functionally related genes, such as
+paralogs, are enriched for colocalization in the same TAD, share more
+often common enhancers than expected by chance, and have increased
+long-range contact frequencies. The clustering of related genes within
+TADs enables concerted gene expression and indicates evolutionary
+constraints in functional genome organization. Indeed, comparative
+genomic analysis of evolutionary rearrangements between human and
+diverse mammal species shows that TADs are highly conserved building
+blocks of genomes across millions of years of evolution. While TADs, in
+general, conserve expression profiles between mouse and human orthologs,
+genes in rearranged TADs show divergent expression profiles.
+Furthermore, a computational pipeline predicts disruption of TADs in
+whole-genome sequenced subjects with diverse neurodevelopmental
+phenotypes. While altered protein-coding sequences cannot explain the
+phenotypes, balanced chromosomal rearrangements disrupt TADs and
+promoter-enhancer interactions of phenotypically matching genes leading
+to miss-regulation in patient-derived cell lines. Finally, a
+computational tool, 7C, is presented to predict chromatin looping
+interactions by broadly available ChIP-seq data. This tool enables to
+study genome folding in many diverse tissues and conditions.
 
-Together, these results show that TAD disruption is associated with
-altered gene regulation during evolution and in diseases. TADs are not
-only structural units of genomes but also important functional building
-blocks and represent regulatory environments for genes. Therefore, it
-will be increasingly important to take the three-dimensional genome
-structure into account, not only in genomic research but also in
-clinical practice.
+Together, these results show that TAD disruptions cause altered gene
+regulation during evolution and in diseases. TADs are not only
+structural units of genomes but also crucial functional building blocks
+and represent regulatory environments for genes. Therefore, it will be
+increasingly important to take genome structure into account, not only
+in genomic research but also in clinical practice.
 
 \hypertarget{intro}{%
 \chapter{Introduction}\label{intro}}
@@ -5130,28 +5129,6 @@ This section discusses the results of chapters \ref{paralog-regulation},
 \ref{TAD-evolution}, \ref{position-effect}, and \ref{loop} in light of
 the most recent literature and suggest further research perspectives.
 
-\hypertarget{limitation-of-the-analysis}{%
-\subsection{Limitation of the
-analysis}\label{limitation-of-the-analysis}}
-
-\begin{itemize}
-\tightlist
-\item
-  Limitations of 3C based methods
-
-  \begin{itemize}
-  \tightlist
-  \item
-    Resolution
-  \item
-    Discuss GAM \citep{Beagrie2017}.
-  \item
-    Interacinots quantification over population of cells (bulk Hi-C)
-  \item
-    Discuss single cell Hi-C
-  \end{itemize}
-\end{itemize}
-
 \hypertarget{co-regulation-of-functionally-related-genes-in-tads}{%
 \section{Co-regulation of functionally related genes in
 TADs}\label{co-regulation-of-functionally-related-genes-in-tads}}
@@ -5320,11 +5297,12 @@ variations is the Liebenberg Syndrom that is characterized by
 malformation of upper limbs, showing the characteristic bone morphology
 of hind-limbs \citep{Spielmann2012}. This syndrome is caused by
 deletions or translocations that disrupt a TAD boundary element which
-exposes the \textbf{PITX1} gene to the activation by an enhancer with
+exposes the \emph{PITX1} gene to the activation by an enhancer with
 specific lower-limb activity \citep{Spielmann2013a}. This example and
-other phenotypes caused by TAD disruptions
-\citep{Lupianez2015, Franke2016} show that altered genome folding upon
-TAD disruption can lead to morphological novelties.
+other pathogenic phenotypes caused by TAD disruptions
+\citep{Lupianez2015, Franke2016, Flottmann2017} show that altered genome
+folding upon TAD disruption can ptentially also lead to physiological
+and morphological novelties during evolution.
 
 Together, our data suggest that TADs act as protective nests for
 evolving newcomer genes. Duplicating genes within TADs seems to be a
@@ -5382,43 +5360,83 @@ These results, together with the strong non-coding conservation in TADs
 and association to conserved gene expression indicates, that selective
 pressure acts on the integrity of TADs.
 
-While miss-regulation upon TAD disruption might be beneficial for an
-organism and allow evolutionary leaps (as discussed above), in most
-cases TAD disruptions might be detrimental for an organism, as can be
-seen in genetic diseases and cancers (as discussed below).
-
-\hypertarget{the-genome-folding-structure-explains-pathomechanism-of-structural-variants}{%
-\section{The genome folding structure explains pathomechanism of
-structural
-variants}\label{the-genome-folding-structure-explains-pathomechanism-of-structural-variants}}
-
 The analysis of genomic rearrangements between human and other species
 during evolution lead to the conclusion that TADs are essential
-regulatory building blocks of genomes. Indeed the changes of expression
-profiles are associated with the disruption of TADs during evolution.
-Altered gene regulation likely lead to severe disadvantages to the
-organism, as was observed for example in genetic diseases
-\citep{Ibn-Salem2014, Lupianez2015} and cancers. Therefore, we interpret
-the depletion of evolutionary rearrangements in TADs and the expression
-change associated with TAD disruption to be a consequence of selective
-pressure on TAD structure. Therefore selective pressure is likely to act
-on TAD structures.
+regulatory building blocks of genomes. This is supported by stonrg
+enrichment for non-coding conservation in TADs \citep{Harmston2017}.
+Furthermore, changes of expression profiles are associated with the
+disruption of TADs during evolution. This altered regulation upon TAD
+disruption might be beneficial for an organism and allow evolutionary
+leaps (as discussed above). However, in most cases, these gene
+miss-expression might be detrimental for an organism, as was observed in
+genetic diseases \citep{Ibn-Salem2014, Lupianez2015} and cancers (as
+discussed below). Therefore, we interpret the depletion of evolutionary
+rearrangements in TADs and the expression change associated with TAD
+disruption to be a consequence of selective pressure on TAD structure.
 
-\begin{itemize}
-\tightlist
-\item
-  Introduce from the evolutionary perspective
-\item
-  Check discussion of position effect section
-\item
-  Discuss and review TAD disease studies (see intro).
-\item
-  Need for contact maps in clinical practice
-\item
-  Limitation of non-tissue-specific interaction data in this project
-\item
-  Tissue-specific interactions needed
-\end{itemize}
+\hypertarget{TAD-disease}{%
+\section{Gene miss-expression by altered TADs in
+disease}\label{TAD-disease}}
+
+Their conservation during evolution supports the functional importance
+of TADs. However, if TADs are indeed crucial for proper gene regulation
+during development, one would expect that TAD disruptions are associated
+with disease and lead to phenotypes by miss-regulation of phenotypically
+relevant genes.
+
+We analyzed balanced chromosomal rearrangements in 17 subjects with
+diverse pathogenic phenotypes. The rearrangement breakpoints are in
+non-coding regions but frequently disrupt TADs. Furthermore, we reported
+disruption of long-range chromatin interactions between several
+enhancers and genes whose annotated clinical features are strongly
+associated with the subjects phenotypes. For some candidate genes, we
+confirm gene expression changes in cell lines derived from subjects with
+such rearrangements (Chapter \ref{position-effect}). Importantly, these
+effects of rearrangements in disease genomes are consistent with the
+comparative genomic analysis finding selective pressure on TAD
+disruptions.
+
+The causal relationship between TAD disruption, miss-expression and
+pathogenic phenotypes has been studied recently in more detail (revied
+for example in
+\citep{Krijger2016, Achinger-Kawecka2017, Yu2017, Andrey2017}). In these
+studies, the authors linked observed pathogenic phenotypes of congenital
+diseases and cancers to structural variations identified in the subjects
+genomes. The observed phenotypes could not be explained, when only the
+disruption of protein-coding sequence or gene dosage was considered.
+However, when considering the genome folding structure and TADs together
+with enhancer activity, the pathogenic effect mechanism became apparent.
+
+Deletions of TAD boundaries can lead to ectopic activation of genes by
+enhancers in neighboring TADs (Figure \ref{TadDisruptions}A). This
+effect mechanism was first shown to be relevant by computationally
+integrating hundreds of deletions with tissue-specific enhancers,
+phenotype-gene associations, and TAD positions. A significant proportion
+of deletion cases could be best explained by such an enhancer adaption
+mechanism \citep{Ibn-Salem2014}.
+
+Experimentally validated examples include the locus of the \emph{LMNB1}
+gene \citep{Giorgio2015}. Deletion of a TAD boundary upstream of
+\emph{LMNB1} result in ectopic contact of enhancers with the
+\emph{LMNB1} promoter, and overexpression of \emph{LMNB1}. This
+pathomechanism leads to autosomal dominant adult-onset demyelinating
+leukodystrophy \citep{Giorgio2015}.
+
+Miss-expression due to ectopic contacts with enhancer can be validated
+now using CRISPR-derived methodologies to induce structural variants in
+mice \citep{Kraft2015, Andrey2017}. These approaches could
+experimentally validate that, deletion of the centromeric or telomeric
+boundary of a TAD containing the \emph{EPHA4} gene causes activation of
+\emph{IHH} or \emph{PAX}, leading to brachydactyly or polydactyly,
+respectively \citep{Lupianez2015}. Interestingly and in line with the
+insulating function of TAD boundaries, introducing of a slightly shorter
+deletion, that did not overlap the TAD boundary, did not cause
+up-regulation \citep{Lupianez2015, Symmons2016}. Other examples include
+the locus of the \emph{LMNB1} gene \citep{Giorgio2015}. Deletion of a
+TAD boundary upstream of \emph{LMNB1} result in ectopic contact of
+enhancers with the \emph{LMNB1} promoter, and overexpression of
+\emph{LMNB1}. This pathomechanism leads to autosomal dominant
+adult-onset demyelinating leukodystrophy \citep{Giorgio2015}.
 
 \begin{figure}
 
@@ -5479,50 +5497,173 @@ expression of Gene 2′ in the neural tube. Figure adpated from
 
 
 
-The crucial implications of genome folding structure on the effect of
-genetic variants highlight the importance of taking genome folding into
-account. However, although genome-wide contact maps become increasingly
-available in recent years, to interpret regulatory variants one needs to
-the folding structure of the genome in the specific cell-type or tissue
-in which the subject's phenotype manifests.
+Depending on their size and positioning, also duplications can bring
+enhancers into contact with gene promoters, which were before separated
+by a TAD boundary (Fig. \ref{TadDisruptions}D). Duplications involving
+no regulatory elements and is contained entirely within a TAD
+(intra-TAD) have in general no major effect on genes in the same TAD, as
+enhancer-promoter contacts are mainly invariant of genomic distance
+within TADs \citep{Symmons2016}. This lack of regulatory phenotype can
+also explain why paralog genes are often created by tandem-duplications
+within TADs during evolution without affecting the regulatory
+environments of other genes (Chapter \ref{paralog-regulation}). However,
+when an intra-TAD duplication contains regulatory environments with
+several enhancers, increased regulatory inputs can lead to
+over-expression. This mechanism leads to upregulation of the \emph{SOX9}
+gene and in turn cases female to male sex reversal \citep{Franke2016}.
+However, further extension of the duplication at the \emph{SOX9} locus,
+encompassing a TAD boundary and the nearby \emph{KCN72} gene, leads to
+the formation of a new TAD, called neo-TAD. Since both, \emph{SOX9}
+enhancers and the \emph{KCN72} gene are included in the duplicated
+regions, \emph{KCN72} gets activated by the \emph{SOX9} enhancers
+leading to Cooks syndrome \citep{Franke2016}.
 
-\hypertarget{prediction-of-chromatin-interactions}{%
-\section{Prediction of chromatin
-interactions}\label{prediction-of-chromatin-interactions}}
+Beside deletions and duplications, balanced chromosomal abnormalities
+(BCA) like inversion or translocation can disrupt TAD and lead to
+similar effect mechanism without gain or loss of genetic material.
+Inversions of TAD boundaries can bring promoters under the control of
+enhancers, that were before in different TADs (Fig.
+\ref{TadDisruptions}C). Such a mechanism leads for example to
+F-syndrome, where inversion of the centromeric boundary of the
+\emph{EPHA4} TAD cause activation of the \emph{WNT6} gene
+\citep{Lupianez2015}. Another recent study analyzed BCAs in 273 subjects
+with a spectrum of congenital abnormalities and find 7.3\% of them
+disrupting TADs encompassing known syndromic loci. Eight rearrangement
+breakpoints were localized in a single TAD containing the \emph{MEF2C}
+gene and resulted in decreased expression of \emph{MEF2C} in these
+subjects \citep{Redin2017}.
 
-\begin{itemize}
-\tightlist
-\item
-  Discuss need for both
+Also, somatic mutation can disrupt TAD boundaries and lead to cancers.
+For example, in T-cell acute lymphoblastic leukemia, two oncogenes,
+\emph{TAL1} and \emph{LMO2} are close to a TAD boundary and get
+activated upon boundary deletion in HEK-293T cells \citep{Hnisz2016}.
+Furthermore, in \emph{IDH} mutant gliomas, TET proteins, which are
+involved in active demethylation, are repressed. This effect leads to
+hypermethylation of several CTCF binding sites and in turn, decreased
+insulation functions of TAD boundaries. This result in ectopic contact
+of constitutively active enhancers and the oncogene \emph{PDGFRA}
+leading to its upregulation \citep{Flavahan2016}. In conjunction with
+these findings, CTCF and cohesin binding sites are frequently mutated by
+single nucleotide variants in several cancer types, suggesting oncogene
+activation by TAD disruptions as a common mechanism in cancers
+\citep{Katainen2015, Yu2017}.
 
-  \begin{itemize}
-  \tightlist
-  \item
-    condition specific interaction maps
-  \item
-    Which factors mediated long-range interactions.
-  \item
-    Plasticity and dynamics of chromatin interactions
-  \end{itemize}
-\item
-  See discussion of seven C manuscript.
-\item
-  The screening of hundreds of TF for their predictive value in loop
-  formation lead to several known and novel factors in chromatin loop
-  formation
+Together, these studies confirm our findings of computationally
+predicted pathomechanism of TAD disruptions upon deletions
+\citep{Ibn-Salem2014} or balanced rearrangements (Chapter
+\ref{position-effect}). TAD disruptions can lead to miss-expression not
+only during evolution but also in disease manifestation. Therefore, it
+will be increasingly important to take the three-dimensional genome
+folding structure into account to interpret the effect of genetic
+variants.
 
-  \begin{itemize}
-  \tightlist
-  \item
-    Discuss loop and TAD were abolishing upon CTCF and cohesin KO.
-  \end{itemize}
-\item
-  Discuss C-technologies and their specific limitation.
-\item
-  However, from very recent work it becomes clear, that there will be a
-  continously increasing development of further methods to probe
-  interactions in a more efficient and targeted way.
-\end{itemize}
+\hypertarget{integrating-genome-folding-data-can-explain-the-pathomechanism-structural-variants}{%
+\section{Integrating genome folding data can explain the pathomechanism
+structural
+variants}\label{integrating-genome-folding-data-can-explain-the-pathomechanism-structural-variants}}
+
+Structural variation, either inherited or arising from de novo germline
+or somatic mutations, make up the majority of different nucleotides
+among human genomes \citep{Sudmant2015, Auton2015}. By their ability to
+alter gene dosage, promote gene fusions, unmask recessive alleles, or
+disrupt associations between genes and their regulatory elements,
+structural variants are involved in numerous congenital syndromes and
+cancers \citep{Stankiewicz2010}. However, many structural variants
+affect only non-coding regions in the genome and are therefore difficult
+to interpret in modern molecular diagnoses.
+
+In several syndromes, structural variants disrupt TADs and rewire
+regulatory interactions between enhancers and genes (Section
+TAD-disease). These effects suggest that molecular diagnoses can benefit
+from taking the genome folding structure into account to identify the
+underlying pathogenic effect mechanism.
+
+In previous work \citep{Ibn-Salem2014} and Chapter
+\ref{position-effect}, we demonstrate how publicly available chromatin
+interaction data can be used together with diverse genomic and
+structured phenotype data to predict regulatory effect mechanism and
+candidate genes. Utilizing such publicly available data, we discovered
+16 genes for 11 DGAP cases that are top-ranking position effect
+candidates for the subjects' clinical phenotypes. Importantly, we also
+applied our computational pipeline to cases with known pathogenic genes
+from the DGAP cohort, and correctly prediction 52 out of 57 genes,
+indicating a high sensitivity of this approach. Compared to more
+elaborate experimental screenings, our computational analysis is rapid
+and can provide additional information to benefit the clinical
+assessment of both coding and non-coding genome variants.
+
+While the existence of other subjects with related phenotypes to the
+DGAP cases does not prove the involvement of neighboring genes in the
+etiology of these phenotypes, it is a step forward towards prediction of
+pathogenic effects starting from a simple computational analysis,
+pointing to a better phenotypic categorization when clinically examining
+affected individuals. Therefore, computational integration of genomic
+and phenotypic data is a crucial step towards prediction of pathogenic
+consequences of non-coding variation observed in prenatal samples.
+
+However, the here presented computational prediction method is limited
+by the quality of genomic and phenotypic data. An essential step in our
+analysis was the quantification of phenotype similarities between
+phenotypes annotated to genes, on the one hand, and phenotypes observed
+in the subject, on the other hand. This gene prioritization was only
+possible by detailed phenotypic annotation data of subjects using the
+Human Phenotype Ontology (HPO). The HPO provides a standardized
+vocabulary of phenotypic abnormalities encountered in human disease and
+relations between them. Furthermore, phenotypes are associations to
+disease by mono-genic diseases \citep{Kohler2014}. The brought
+application of such deeply structured phenotypic information will be
+essential for correctly interpreting genomic variants causing individual
+abnormalities observed in heterogeneous patient cohorts
+\citep{Brookes2015}. While the continuously decreasing sequencing costs
+allow variant detection at high-resolution in large cohorts and
+populations, the detailed and precise phenotypical annotation using
+standardized vocabularies is lacking often behind.
+
+The crucial implications of genome folding structure on the influence of
+genetic variants highlight the importance of taking genome folding data
+into account in clinical practice. However, an apparent limitation in
+predicting the effect of genetic variants on genome folding is the lack
+of high-resolution chromatin interaction data that is specific for the
+tissue of interest. While TAD boundaries are mostly stable between
+cell-types \citep{Dixon2012, Rao2014, Schmitt2016} and during
+differentiation \citep{Dixon2015}, many regulatory interactions are cell
+type-specific \citep{LeDily2014, Dixon2015}. This tissue-specificity
+raises the question of whether chromatin interaction data from different
+tissues can be used to predict regulatory interactions changes in the
+cell-types and tissues relevant for pathogenesis. Although genome-wide
+contact maps become increasingly available in recent years, high
+heterogeneity between proximity-ligation methods makes it challenging to
+train prediction methods on data across different studies. Therefore, it
+will be crucial to computationally predict long-range interaction in the
+tissue of interest from other tissue-specific genomic data that is
+measured along the linear genome. Another critical challenge is to
+predict chromatin not only the disrupted chromatin interactions but also
+gained interactions and resulting domain organization. Similar to the
+creation of neo-TADs by tandem-duplication of TAD boundaries, inversion
+and translocations can create novel folding structures by connecting
+loci that were before separated by TAD boundaries or even on different
+chromosomes. However, which regions in such fused TADs interact across
+rearrangement breakpoints is not clear and can only be measured
+experimentally in transgenic mouse models. Computational models that
+predict long-range interactions from genomic sequence could help here. A
+prediction model could be trained on the unaffected genome to predict
+chromatin interactions from sequence features. The model can then be
+applied to the altered sequence uppon structural variations to predict
+the folding structure in disease genomes. Such prediction models can
+help to understand better if and how new TADs are formed and which
+regulatory interactions are gained upon structural variations.
+
+We provide initial support for such an approach by developing 7C to
+predict chromatin looping interactions from protein binding data and
+sequence motifs (Chapter \ref{loop}). Approaches, like 7C, allows
+predicting genome folding by taking into account both, tissue
+specificity and potentially altered genomic sequence. However, the
+application on predicting folding in rearranged genomes needs to be
+demonstrated.
+
+\hypertarget{condition-specific-genome-folding-by-7c}{%
+\section{Condition specific genome folding by
+7C}\label{condition-specific-genome-folding-by-7c}}
 
 The majority of disease-associated variants uncovered by genome-wide
 association studies (GWAS) reside in noncoding sequences. Many variants
@@ -5538,51 +5679,42 @@ thousands of GWAS SNPs \citep{Javierre2016}. In another study, the
 noncoding variants associated with schizophrenia could be annotated
 using Hi-C contact maps from human cerebral cortex \citep{Won2016}.
 
-\hypertarget{conclusions}{%
-\section{Conclusions}\label{conclusions}}
+\begin{itemize}
+\tightlist
+\item
+  Discuss need for both
 
-Recent methodological advances in chromatin conformation capture
-experiments resulted in genome-wide contact maps of genomes. These data
-lead to many fascinating insights into the folding structures of
-genomes. One important discovery was that chromosomes fold locally into
-discreet genomic domains, called TADs.
+  \begin{itemize}
+  \tightlist
+  \item
+    condition specific interaction maps
+  \item
+    Plasticity and dynamics of chromatin interactions
+  \end{itemize}
+\item
+  See discussion of seven C manuscript.
+\item
+  Discuss C-technologies and their specific limitation.
+\item
+  However, from very recent work it becomes clear, that there will be a
+  continously increasing development of further methods to probe
+  interactions in a more efficient and targeted way.
+\end{itemize}
 
-The work described in this thesis shows that TADs are not only
-structural units of genomes but that they are also functionally
-essential for the correct regulation of gene expression. TADs represent
-a regulatory environment that restricts the interaction landscape of
-enhancers. Indeed, functionally related genes, such as paralogs, are
-co-regulated within TADs. During evolution, new genes can emerge by
-duplication and find established regulatory environments within TADs.
-Therefore, TADs represent productive nests for novel genes in evolution.
-Their stability further stressed the functional importance of TADs
-during hundred million years of evolution. Indeed stable TADs are
-associated with conserved expression profiles of genes.
+\hypertarget{architectural-proteins-mediate-chromatin-looping}{%
+\section{Architectural proteins mediate chromatin
+looping}\label{architectural-proteins-mediate-chromatin-looping}}
 
-Disruption of TADs by rearrangements is associated with changes in gene
-expression profiles during evolution as well as in genomes of subjects
-with developmental diseases. While these disruptions of TADs might be
-beneficial for an organism and lead to evolutionary leaps in some cases,
-I show in disease genomes, that disruptions of TADs can result in severe
-phenotypes like mental retardation. Therefore, the three-dimensional
-folding structure of genomes, including TADs and enhancer-promoter
-interactions have to be considered for the interpretation of genomic
-variants of patient genomes.
+\begin{itemize}
+\tightlist
+\item
+  Which factors mediated long-range interactions.
+\end{itemize}
 
-While continually decreasing costs of sequencing will further enable the
-analysis of individual genomes in many genetic syndromes or cancers, it
-will be increasingly important to interpret these variants within their
-functional genomic context correctly. To this end, we need a deeper
-understanding of the functional role of genome folding including its
-dynamics between single cells as well as its changes in specific cell
-types and conditions. To integrate diverse types of functional data that
-is measured along the genomes with the chromatin folding patterns and
-their interplay, we need carefully designed computational models. This
-will address not only fundamental questions such as the evolution of
-genomes, mechanisms of gene regulation in differentiation and
-development but also solve practical problems such as the interpretation
-of genetic variants in disease genomes for better developments of
-diagnosis and treatments.
+The screening of hundreds of TF for their predictive value in loop
+formation lead to several known and novel factors in chromatin loop
+formation. - Discuss loop and TAD were abolishing upon CTCF and cohesin
+KO.
 
 \hypertarget{further-directions}{%
 \section{Further directions}\label{further-directions}}
@@ -5631,7 +5763,77 @@ diagnosis and treatments.
   \item
     How are loop formation and domain organization regulated?
   \end{itemize}
+\item
+  4D Nucleosome initiative
 \end{itemize}
+
+\hypertarget{limitation-of-the-analysis}{%
+\subsection{Limitation of the
+analysis}\label{limitation-of-the-analysis}}
+
+\begin{itemize}
+\tightlist
+\item
+  Limitations of 3C based methods
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Resolution
+  \item
+    Discuss GAM \citep{Beagrie2017}.
+  \item
+    Interacinots quantification over population of cells (bulk Hi-C)
+  \item
+    Discuss single cell Hi-C
+  \end{itemize}
+\end{itemize}
+
+\hypertarget{conclusions}{%
+\section{Conclusions}\label{conclusions}}
+
+Recent methodological advances in chromatin conformation capture
+experiments resulted in genome-wide contact maps of genomes. These data
+lead to many fascinating insights into the folding structures of
+genomes. One important discovery was that chromosomes fold locally into
+discreet genomic domains, called TADs.
+
+The work described in this thesis shows that TADs are not only
+structural units of genomes but that they are also functionally
+essential for the correct regulation of gene expression. TADs represent
+a regulatory environment that restricts the interaction landscape of
+enhancers. Indeed, functionally related genes, such as paralogs, are
+co-regulated within TADs. During evolution, new genes can emerge by
+duplication and find established regulatory environments within TADs.
+Therefore, TADs represent productive nests for novel genes in evolution.
+Their stability further stressed the functional importance of TADs
+during hundred million years of evolution. Indeed stable TADs are
+associated with conserved expression profiles of genes.
+
+Disruption of TADs by rearrangements is associated with changes in gene
+expression profiles during evolution as well as in genomes of subjects
+with developmental diseases. While these disruptions of TADs might be
+beneficial for an organism and lead to evolutionary leaps in some cases,
+I show in disease genomes, that disruptions of TADs can result in severe
+phenotypes like mental retardation. Therefore, the three-dimensional
+folding structure of genomes, including TADs and enhancer-promoter
+interactions have to be considered for the interpretation of genomic
+variants of patient genomes.
+
+While continually decreasing costs of sequencing will further enable the
+analysis of individual genomes in many genetic syndromes or cancers, it
+will be increasingly important to interpret these variants within their
+functional genomic context correctly. To this end, we need a deeper
+understanding of the functional role of genome folding including its
+dynamics between single cells as well as its changes in specific cell
+types and conditions. To integrate diverse types of functional data that
+is measured along the genomes with the chromatin folding patterns and
+their interplay, we need carefully designed computational models. This
+will address not only fundamental questions such as the evolution of
+genomes, mechanisms of gene regulation in differentiation and
+development but also solve practical problems such as the interpretation
+of genetic variants in disease genomes for better developments of
+diagnosis and treatments.
 
 \hypertarget{appendix-appendix}{%
 \appendix}
